--- a/Advanced Calculus 2/macros.tex
+++ b/Advanced Calculus 2/macros.tex
@@ -35,6 +35,7 @@
 \newcommand{\inc}{\in\C}
 \newcommand{\inq}{\in\Q}
 \newcommand{\norm}[1]{\| #1 \|}
+\newcommand{\bnorm}[1]{\Big\| #1 \Big\|}
 \newcommand{\gen}[1]{\langle #1 \rangle}
 \newcommand{\abso}[1]{\left|#1\right|}
 \newcommand{\myref}[2]{\hyperref[#2]{#1\ \ref*{#2}}}
